# aves-tablas

./: .gitignore  README.md  pyproject.toml  test.py
src/aves_tablas/visualization/: areas.py  boxplot.py  scatter.py
src/aves_tablas/visualization/tables/: bars.py
