[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aves-tablas"
version = "0.1.0"
description = "Funciones de visualización de tablas y gráficos personalizados"
authors = [
    { name = "Tu Nombre", email = "tu@email.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "seaborn",
    "pandas",
    "adjustText",
    # otros que uses
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
